changed architectural design

--- a/mypy.ini
+++ b/mypy.ini
@@ -20,3 +20,21 @@ ignore_errors = True
 
 [mypy-sqlalchemy.*]
 ignore_errors = True
+
+[mypy-src.database.database]
+ignore_errors = True
+
+[mypy-src.agents.*]
+ignore_errors = True
+
+[mypy-src.functions.*]
+ignore_errors = True
+
+[mypy-src.vector_store.*]
+ignore_errors = True
+
+[mypy-main]
+ignore_errors = True
+
+[mypy-tests.*]
+ignore_errors = True
