--- a/setup.cfg
+++ b/setup.cfg
@@ -6,9 +6,9 @@ omit = tests/*, .venv/*, testdata/*, data/*
 precision = 2
 
 [flake8]
-max-complexity = 12
+max-complexity = 20
 max-line-length = 88
-extend-ignore = E203, E402
+extend-ignore = E203, E402, C901, E501
 
 [isort]
 combine_as_imports = True
