--- a/.env.template
+++ b/.env.template
@@ -1,24 +1,22 @@
-# OpenAI Configuration
 OPENAI_API_KEY=your_openai_api_key_here
 OPENAI_MODEL=gpt-4-turbo-preview
 
-# Embedding Configuration
 EMBEDDING_MODEL=text-embedding-3-small
 
-# Database Configuration
 DATABASE_URL=sqlite:///./ecommerce_chatbot.db
 DATABASE_ECHO=false
 
-# Vector Database Configuration
 VECTOR_DB_PATH=./vector_db
 VECTOR_COLLECTION_NAME=products
 VECTOR_SEARCH_K=5
 
-# Application Configuration
 MAX_CHAT_HISTORY=50
 DEBUG=false
 LOG_LEVEL=INFO
 
-# Function Calling Configuration
 MAX_FUNCTION_CALLS=10
 FUNCTION_TIMEOUT=30
+
+LANGFUSE_PUBLIC_KEY=your_langfuse_public_key
+LANGFUSE_SECRET_KEY=your_langfuse_secret_key
+LANGFUSE_HOST=https://cloud.langfuse.com
